--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <!-- Фильтры -->
-    <div class="filters-section py-4">
+    <div class="filters-section ">
         <div class="row g-3 align-items-center">
             <div class="col-md-2">
                 <select class="form-select">
@@ -41,20 +41,21 @@
                 <input type="date" class="form-control" placeholder="по">
             </div>
             <div class="col-md-2">
-                <button class="btn btn-outline-light w-100">Все фильтры</button>
+                <button class="btn  ">Все фильтры</button>
             </div>
         </div>
     </div>
 
     <!-- Теги-фильтры -->
-    <div class="tag-filters mb-3">
+    <div class="tag-filters ">
         <button type="button" class="tag purple">Пушкинская карта</button>
         <button type="button" class="tag blue">Детям</button>
         <button type="button" class="tag green">Рекомендуемые события</button>
         <button type="button" class="tag orange">Юмор</button>
-        <button type="button" class="tag pink">Местные театры</button>
-        <button type="button" class="tag">На этой неделе</button>
-        <button type="button" class="tag">В этом месяце</button>
+        <button type="button" class="tag cream">Местные театры</button>
+        <button type="button" class="tag pink">На этой неделе</button>
+
+        <button type="button" class="tag green">В этом месяце</button>
     </div>
 
     <!-- Сетка карточек событий -->
