--- a/index.html
+++ b/index.html
@@ -59,22 +59,26 @@
     </div>
 
     <!-- Сетка карточек событий -->
-    <div class="row g-1">
+    <div class="row g-3">
         <!-- Карточка события -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/knyazz.png" class="card-img-top" alt="Event Image">
-                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 m-2">
-                        <i class="bi bi-bookmark"></i>
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
                     </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+                        <button type="button" class="tag purple ">Пушкинская карта</button>
+                        <button type="button" class="tag blue">Детям</button>
+                    </div>
                 </div>
                 <div class="card-body">
-                    <p class="event-datetime">31 мая, 19:00 — КЦ "Автоград"</p>
-                    <h5 class="card-title">Название события</h5>
+                    <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">КняZz. Ангел и Демон</h5>
                     <div class="d-flex justify-content-between align-items-center mt-2">
                         <span class="price">от 2 500 ₽</span>
-                        <span class="status cancelled">Отменен</span>
+
                     </div>
                 </div>
             </div>
@@ -84,16 +88,19 @@
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/zara.png" class="card-img-top" alt="Event Image">
-                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 m-2">
-                        <i class="bi bi-bookmark"></i>
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
                     </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+
+                    </div>
                 </div>
                 <div class="card-body">
-                    <p class="event-datetime">1 июня, 20:00 — ДК "Приморский"</p>
-                    <h5 class="card-title">Еще одно событие</h5>
+                    <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">Зара</h5>
                     <div class="d-flex justify-content-between align-items-center mt-2">
-                        <span class="price">от 1 000 ₽</span>
-                        <!-- Статус отсутствует -->
+                        <span class="price">от 2 500 ₽</span>
+
                     </div>
                 </div>
             </div>
@@ -101,36 +108,42 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
-                    <img src="img/knyazz.png" class="card-img-top" alt="Event Image">
-                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 m-2">
-                        <i class="bi bi-bookmark"></i>
+                    <img src="img/mishel.png" class="card-img-top" alt="Event Image">
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
                     </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+
+                    </div>
                 </div>
                 <div class="card-body">
-                    <p class="event-datetime">31 мая, 19:00 — КЦ "Автоград"</p>
-                    <h5 class="card-title">Название события</h5>
+                    <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">Моя Мишель</h5>
                     <div class="d-flex justify-content-between align-items-center mt-2">
-                        <span class="price">от 2 500 ₽</span>
-                        <span class="status cancelled">Отменен</span>
+                        <span class="price">от 5000 ₽</span>
+
                     </div>
                 </div>
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="card event-card">
+        <div class="col-sm-6 col-md-4 col-lg-3 ">
+            <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
-                    <img src="img/zara.png" class="card-img-top" alt="Event Image">
-                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 m-2">
-                        <i class="bi bi-bookmark"></i>
+                    <img src="img/virt.png" class="card-img-top" alt="Event Image">
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
                     </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+
+                    </div>
                 </div>
                 <div class="card-body">
-                    <p class="event-datetime">1 июня, 20:00 — ДК "Приморский"</p>
-                    <h5 class="card-title">Еще одно событие</h5>
+                    <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">Виртуозы России</h5>
                     <div class="d-flex justify-content-between align-items-center mt-2">
-                        <span class="price">от 1 000 ₽</span>
-                        <!-- Статус отсутствует -->
+
+                        <span class="status-cancelled">Отменен</span>
                     </div>
                 </div>
             </div>
