--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- Сетка карточек событий -->
-    <div class="row g-3">
+    <div class="row g-3 mb-3">
         <!-- Карточка события -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
@@ -76,10 +76,11 @@
                 <div class="card-body">
                     <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
                     <h5 class="card-title">КняZz. Ангел и Демон</h5>
-                    <div class="d-flex justify-content-between align-items-center mt-2">
-                        <span class="price">от 2 500 ₽</span>
 
-                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto">
+                    <span class="price">от 2 500 ₽</span>
+
                 </div>
             </div>
         </div>
@@ -98,10 +99,11 @@
                 <div class="card-body">
                     <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
                     <h5 class="card-title">Зара</h5>
-                    <div class="d-flex justify-content-between align-items-center mt-2">
-                        <span class="price">от 2 500 ₽</span>
 
-                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto">
+                    <span class="price">от 2 500 ₽</span>
+
                 </div>
             </div>
         </div>
@@ -119,10 +121,11 @@
                 <div class="card-body">
                     <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
                     <h5 class="card-title">Моя Мишель</h5>
-                    <div class="d-flex justify-content-between align-items-center mt-2">
-                        <span class="price">от 5000 ₽</span>
 
-                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto ">
+                    <span class="price">от 5 000 ₽</span>
+
                 </div>
             </div>
         </div>
@@ -141,16 +144,126 @@
                 <div class="card-body">
                     <p class="event-datetime">31 мая, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
                     <h5 class="card-title">Виртуозы России</h5>
-                    <div class="d-flex justify-content-between align-items-center mt-2">
 
-                        <span class="status-cancelled">Отменен</span>
-                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto ">
+
+                    <span class="status-cancelled">Отменен</span>
                 </div>
             </div>
         </div>
         <!-- Дополнительные карточки аналогично -->
+
+
     </div>
+    <div class="row g-3 mb-3">
+        <!-- Карточка события -->
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card event-card">
+                <div class="card-img-container position-relative">
+                    <img src="img/marshal.png" class="card-img-top" alt="Event Image">
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
+                    </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p class="event-datetime">1 июня, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">Александр Маршал </h5>
+
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto ">
+                    <span class="price">от 1 800 ₽</span>
+
+                </div>
+            </div>
+        </div>
+        <!-- Еще одна карточка -->
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card event-card">
+                <div class="card-img-container position-relative">
+                    <img src="img/beburishvili.jpg" class="card-img-top" alt="Event Image">
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
+                    </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+                        <button type="button" class="tag orange">Юмор</button>
+
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p class="event-datetime">1 июня, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">Андрей Бебуришвили            Stand Up</h5>
+
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto ">
+                    <span class="price">от 2 500 ₽</span>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card event-card">
+                <div class="card-img-container position-relative">
+                    <img src="img/sherbakov.png" class="card-img-top" alt="Event Image">
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
+                    </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+                        <button type="button" class="tag orange">Юмор</button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p class="event-datetime">1 июня, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">Standup Алексей Щербаков
+                    </h5>
+
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto ">
+                    <span class="price">от 3 000 ₽</span>
+
+                </div>
+            </div>
+        </div>
+        <!-- Еще одна карточка -->
+        <div class="col-sm-6 col-md-4 col-lg-3 ">
+            <div class="card event-card">
+                <div class="card-img-container position-relative">
+                    <img src="img/sati.png" class="card-img-top" alt="Event Image">
+                    <button class="btn btn-light btn-sm icon-btn position-absolute top-0 end-0 ">
+                        <img src="img/bookmark.svg" alt="" srcset="">
+                    </button>
+                    <div class="tag-filters position-absolute bottom-0 start-0">
+
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p class="event-datetime">2 июня, 19:00 <img src="img/event-datetime-dot.svg" alt="event-datetime-dot"> КЦ «Автоград»</p>
+                    <h5 class="card-title">Sati </h5>
+
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-auto ">
+                    <span class="price">от 2 500 ₽</span>
+
+                </div>
+            </div>
+        </div>
+        <!-- Дополнительные карточки аналогично -->
+
+
+
+
+
+    </div>
+
+
+
 </div>
+
+
+
 
 
 
