--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bilettlt</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@500;700;900&family=Onest:wght@600&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -61,7 +63,7 @@
     <!-- Сетка карточек событий -->
     <div class="row g-3 mb-3">
         <!-- Карточка события -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/knyazz.png" class="card-img-top" alt="Event Image">
@@ -85,7 +87,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/zara.png" class="card-img-top" alt="Event Image">
@@ -107,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/mishel.png" class="card-img-top" alt="Event Image">
@@ -130,7 +132,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/virt.png" class="card-img-top" alt="Event Image">
@@ -157,7 +159,7 @@
 
 
         <!-- Карточка события -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/marshal.png" class="card-img-top" alt="Event Image">
@@ -180,7 +182,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/beburishvili.jpg" class="card-img-top" alt="Event Image">
@@ -204,7 +206,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sherbakov.png" class="card-img-top" alt="Event Image">
@@ -228,7 +230,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sati.png" class="card-img-top" alt="Event Image">
@@ -258,7 +260,7 @@
 
 
         <!-- Карточка события -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/simf.png" class="card-img-top" alt="Event Image">
@@ -281,7 +283,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/eva.png" class="card-img-top" alt="Event Image">
@@ -305,7 +307,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/zveri.png" class="card-img-top" alt="Event Image">
@@ -328,7 +330,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/master.png" class="card-img-top" alt="Event Image">
@@ -362,7 +364,7 @@
 
 
 
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/radio.png" class="card-img-top" alt="Event Image">
@@ -385,7 +387,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/orkestr.png" class="card-img-top" alt="Event Image">
@@ -408,7 +410,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/shou.png" class="card-img-top" alt="Event Image">
@@ -432,7 +434,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/svidanie.png" class="card-img-top" alt="Event Image">
@@ -456,7 +458,7 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card vertical-banner">
 
                     <img  src="img/vertical_banner.png" alt="vertical_banner">
@@ -465,7 +467,7 @@
         </div>
 
 
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/zara.png" class="card-img-top" alt="Event Image">
@@ -487,7 +489,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/mishel.png" class="card-img-top" alt="Event Image">
@@ -510,7 +512,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/virt.png" class="card-img-top" alt="Event Image">
@@ -537,7 +539,7 @@
 
 
         <!-- Карточка события -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/marshal.png" class="card-img-top" alt="Event Image">
@@ -560,7 +562,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/beburishvili.jpg" class="card-img-top" alt="Event Image">
@@ -583,7 +585,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sherbakov.png" class="card-img-top" alt="Event Image">
@@ -607,7 +609,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sati.png" class="card-img-top" alt="Event Image">
@@ -630,14 +632,14 @@
             </div>
         </div>
 
-        <div class="col-12 ">
+        <div class="col-12 col-12 ">
             <div class="banner-block">
                 <img  src="img/horisontal_banner2.png" alt="horisontal_banner2">
             </div>
         </div>
 
         <!-- Карточка события -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/simf.png" class="card-img-top" alt="Event Image">
@@ -660,7 +662,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/eva.png" class="card-img-top" alt="Event Image">
@@ -684,7 +686,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/zveri.png" class="card-img-top" alt="Event Image">
@@ -707,7 +709,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/master.png" class="card-img-top" alt="Event Image">
@@ -731,7 +733,7 @@
         </div>
         <!-- Дополнительные карточки аналогично -->
         <!-- Карточка события -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/marshal.png" class="card-img-top" alt="Event Image">
@@ -754,7 +756,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/beburishvili.jpg" class="card-img-top" alt="Event Image">
@@ -778,7 +780,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sherbakov.png" class="card-img-top" alt="Event Image">
@@ -802,7 +804,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sati.png" class="card-img-top" alt="Event Image">
