--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     </div>
 
     <!-- Сетка карточек событий -->
-    <div class="row g-3 mb-3">
+    <div class="row g-3 mb-3 row-xxl-5-cols">
         <!-- Карточка события -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/knyazz.png" class="card-img-top" alt="Event Image">
@@ -87,7 +87,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/zara.png" class="card-img-top" alt="Event Image">
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/mishel.png" class="card-img-top" alt="Event Image">
@@ -132,7 +132,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/virt.png" class="card-img-top" alt="Event Image">
@@ -159,7 +159,7 @@
 
 
         <!-- Карточка события -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/marshal.png" class="card-img-top" alt="Event Image">
@@ -182,7 +182,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/beburishvili.jpg" class="card-img-top" alt="Event Image">
@@ -206,7 +206,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sherbakov.png" class="card-img-top" alt="Event Image">
@@ -230,7 +230,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sati.png" class="card-img-top" alt="Event Image">
@@ -260,7 +260,7 @@
 
 
         <!-- Карточка события -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/simf.png" class="card-img-top" alt="Event Image">
@@ -283,7 +283,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/eva.png" class="card-img-top" alt="Event Image">
@@ -307,7 +307,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/zveri.png" class="card-img-top" alt="Event Image">
@@ -330,7 +330,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/master.png" class="card-img-top" alt="Event Image">
@@ -354,17 +354,13 @@
         </div>
         <!-- Дополнительные карточки аналогично -->
 
-        <div class="col-12 ">
-            <div class="banner-block">
-                <img  src="img/horisontal_banner.png" alt="horisontal_banner">
-            </div>
-        </div>
 
 
 
 
 
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/radio.png" class="card-img-top" alt="Event Image">
@@ -387,7 +383,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/orkestr.png" class="card-img-top" alt="Event Image">
@@ -410,7 +406,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/shou.png" class="card-img-top" alt="Event Image">
@@ -434,7 +430,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/svidanie.png" class="card-img-top" alt="Event Image">
@@ -458,7 +454,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card vertical-banner">
 
                     <img  src="img/vertical_banner.png" alt="vertical_banner">
@@ -467,7 +463,7 @@
         </div>
 
 
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/zara.png" class="card-img-top" alt="Event Image">
@@ -489,7 +485,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/mishel.png" class="card-img-top" alt="Event Image">
@@ -512,7 +508,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/virt.png" class="card-img-top" alt="Event Image">
@@ -539,7 +535,7 @@
 
 
         <!-- Карточка события -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/marshal.png" class="card-img-top" alt="Event Image">
@@ -562,7 +558,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/beburishvili.jpg" class="card-img-top" alt="Event Image">
@@ -585,7 +581,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sherbakov.png" class="card-img-top" alt="Event Image">
@@ -609,7 +605,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sati.png" class="card-img-top" alt="Event Image">
@@ -632,14 +628,14 @@
             </div>
         </div>
 
-        <div class="col-12 col-12 ">
+        <div class="col-6 col-12 d-block d-xxl-none">
             <div class="banner-block">
                 <img  src="img/horisontal_banner2.png" alt="horisontal_banner2">
             </div>
         </div>
 
         <!-- Карточка события -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/simf.png" class="card-img-top" alt="Event Image">
@@ -662,7 +658,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/eva.png" class="card-img-top" alt="Event Image">
@@ -686,7 +682,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card event-card-cancelled">
                 <div class="card-img-container position-relative">
                     <img src="img/zveri.png" class="card-img-top" alt="Event Image">
@@ -709,7 +705,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/master.png" class="card-img-top" alt="Event Image">
@@ -733,7 +729,7 @@
         </div>
         <!-- Дополнительные карточки аналогично -->
         <!-- Карточка события -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/marshal.png" class="card-img-top" alt="Event Image">
@@ -756,7 +752,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/beburishvili.jpg" class="card-img-top" alt="Event Image">
@@ -780,7 +776,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sherbakov.png" class="card-img-top" alt="Event Image">
@@ -804,7 +800,7 @@
             </div>
         </div>
         <!-- Еще одна карточка -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 ">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3 col">
             <div class="card event-card">
                 <div class="card-img-container position-relative">
                     <img src="img/sati.png" class="card-img-top" alt="Event Image">
@@ -846,6 +842,34 @@
 
 
 </div>
+
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const row = document.querySelector(".row-xxl-5-cols");
+        const cols = row.querySelectorAll(".col"); // все колонки (включая карточки)
+
+        const screenWidth = window.innerWidth;
+        const targetIndex = screenWidth >= 1400 ? 15 : 12;
+
+        // Удаляем старый баннер, если есть
+        const existingBanner = row.querySelector(".col.banner-container");
+        if (existingBanner) existingBanner.remove();
+
+        // Если карточек достаточно — вставляем баннер
+        if (cols.length >= targetIndex) {
+            const bannerCol = document.createElement("div");
+            bannerCol.className = "col-12 banner-container"; // чтобы легко удалять при повторной отрисовке
+            bannerCol.innerHTML = `
+        <div class="banner-block">
+          <img src="img/horisontal_banner.png" class="img-fluid w-100" alt="Баннер">
+        </div>
+      `;
+
+            cols[targetIndex - 1].insertAdjacentElement("afterend", bannerCol);
+        }
+    });
+</script>
 
 
 
