--- a/index.html
+++ b/index.html
@@ -843,6 +843,87 @@
 
 </div>
 
+<footer class="footer">
+    <div class="container ">
+        <div class="footer__wrapper">
+        <div class="footer__row row justify-content-between">
+            <!-- Колонка: Контакты -->
+            <div class="footer__column col-9 col-md-4 ">
+                <div class="footer__contact d-flex align-items-center mb-4">
+                    <img src="img/logo-bilettlt.png" alt="logo" class="footer__logo me-3" width="48" height="48">
+                    <span class="footer__phone">+7 (8482) 39-89-89</span>
+                </div>
+
+            </div>
+
+            <!-- Колонка: Информация -->
+
+
+            <!-- Соцсети -->
+            <div class="footer__column col-3 col-md-2 d-flex justify-content-end  align-items-start ">
+                <div class="footer__social social">
+                    <a href="#" class="social__icon">
+                        <svg  class="social__svg" width="21" height="18" viewBox="0 0 21 18"  fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18.6646 0.717003L0.934606 7.554C-0.275394 8.04 -0.268393 8.715 0.712607 9.016L5.26461 10.436L15.7966 3.791C16.2946 3.488 16.7496 3.651 16.3756 3.983L7.84261 11.684H7.84061L7.84261 11.685L7.52861 16.377C7.98861 16.377 8.19161 16.166 8.44961 15.917L10.6606 13.767L15.2596 17.164C16.1076 17.631 16.7166 17.391 16.9276 16.379L19.9466 2.151C20.2556 0.912003 19.4736 0.351003 18.6646 0.717003Z"  />
+                         </svg>
+                    </a>
+                    <a href="#" class="social__icon">
+                        <svg class="social__svg" width="24" height="14" viewBox="0 0 24 14" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.3941 6.74939C13.9793 6.5934 13.9793 5.99765 13.9535 5.58279C13.8498 4.10505 14.3684 1.84902 13.7461 0.889854C13.3055 0.319001 11.1789 0.371274 9.88289 0.449268C9.51947 0.501541 9.07888 0.578706 8.76774 0.734695C8.45659 0.890684 8.14544 1.14956 8.14544 1.38271C8.14544 1.71958 8.92372 1.66814 9.20832 2.10872C9.51947 2.57586 9.51947 3.58647 9.51947 4.41619C9.51947 5.37536 9.36348 6.6465 8.97517 6.69794C8.37859 6.72367 8.04172 6.12709 7.73058 5.68651C7.10828 4.83106 6.48599 3.76735 6.01885 2.73019C5.7857 2.18589 5.65543 1.58931 5.31856 1.35616C4.79998 0.99274 3.86654 0.967019 2.95882 0.99274C2.12909 1.01846 0.935941 0.914746 0.702788 1.4076C0.521078 1.9519 0.91022 2.47048 1.11765 2.9119C2.18053 5.21937 3.32141 7.24224 4.72199 9.16057C6.01885 10.9495 7.23689 12.3758 9.62236 13.1275C10.2969 13.3349 13.2524 13.9315 13.849 13.1275C14.0564 12.8164 14.005 12.1161 14.1087 11.5975C14.2124 11.0789 14.3418 10.5603 14.8347 10.5346C15.2496 10.5089 15.4827 10.8715 15.7424 11.1312C16.0278 11.4166 16.261 11.6498 16.4684 11.9095C16.9613 12.4023 17.4799 13.0761 18.1022 13.3358C18.9576 13.6992 20.2802 13.5955 21.5248 13.5432C22.5362 13.5175 23.2622 13.31 23.3402 12.7135C23.3925 12.2463 22.8731 11.5726 22.562 11.1834C21.7837 10.2243 21.4211 9.93886 20.5391 9.05686C20.1499 8.66772 19.6571 8.25285 19.6571 7.78655C19.6314 7.50112 19.8645 7.24224 20.0719 6.95682C20.9797 5.60851 21.8874 4.64935 22.7171 3.24877C22.9503 2.8339 23.4954 1.87474 23.288 1.4076C23.0548 0.889024 21.7579 1.04418 20.9539 1.04418C19.9168 1.04418 18.5685 0.966188 18.3088 1.17362C17.8159 1.51049 17.6085 2.05562 17.3753 2.5742C16.8567 3.76735 16.1565 4.98539 15.4304 5.89311C15.1707 6.20426 14.6787 6.85227 14.3933 6.74856L14.3941 6.74939Z" />
+                         </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="footer__row row">
+            <!-- Колонка: Контакты -->
+            <div class="footer__column  col-6  col-md-4 ">
+
+                <h6 class="footer__title">О нас</h6>
+                <ul class="footer__list list-unstyled">
+                    <li class="footer__item"><a href="#" class="footer__link">Публичная оферта</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Кассы</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">О компании</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Билетные кассы Самары</a></li>
+                </ul>
+            </div>
+
+            <!-- Колонка: Информация -->
+            <div class="footer__column col-6 col-md-4 ">
+                <h6 class="footer__title">Полезная информация</h6>
+                <ul class="footer__list list-unstyled">
+                    <li class="footer__item"><a href="#" class="footer__link">Как купить билет</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Сервисный сбор при покупке билетов</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Правила возврата билетов</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Отмены, Переносы Мероприятий</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Пользовательское соглашение</a></li>
+                </ul>
+            </div>
+
+            <!-- Колонка: Организаторам -->
+            <div class="footer__column  footer__margin-minus col-6  col-md-2 ">
+                <h6 class="footer__title">Организаторам</h6>
+                <ul class="footer__list list-unstyled">
+                    <li class="footer__item"><a href="#" class="footer__link">Рамки для афиш</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+
+
+
+
+
+
+        <hr class="footer__divider">
+        </div>
+    </div>
+</footer>
+
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
