--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 
     <!-- Теги-фильтры -->
-    <div class="tag-filters ">
+    <div class="tag-filters p-1 p-sm-0 ">
         <button type="button" class="tag purple">Пушкинская&nbsp;карта</button>
         <button type="button" class="tag blue">Детям</button>
         <button type="button" class="tag green">Рекомендуемые&nbsp;события</button>
