--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
 <header class="header fixed-top">
     <div class="container header__container">
         <div class="header__left">
-            <a href="#" class="header__logo"><img src="https://via.placeholder.com/40" alt="Логотип"></a>
+            <a href="#" class="header__logo"><img src="img/logo-bilettlt.png" alt="Логотип"></a>
             <nav class="header__nav">
                 <ul class="header__menu">
                     <li class="header__menu-item"><a href="#">Площадки</a></li>
                     <li class="header__menu-item"><a href="#">Новости</a></li>
                     <li class="header__menu-item"><a href="#">Кассы</a></li>
                 </ul>
+                <form action="#" class="header__search">
+                    <input type="text" placeholder="Поиск по названию" class="header__search-input">
+                    <button type="submit" class="header__search-btn">&#128269;</button>
+                </form>
             </nav>
         </div>
         <div class="header__right">
-            <form action="#" class="header__search">
-                <input type="text" placeholder="Поиск по названию" class="header__search-input">
-                <button type="submit" class="header__search-btn">&#128269;</button>
-            </form>
+
             <div class="header__phone">+7 (8482) 39-89-89</div>
             <div class="header__city">
                 <span class="header__city-icon">&#128205;</span>
