--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
                 <form action="#" class="header__search">
                     <input type="text" placeholder="Поиск по названию" class="header__search-input">
-                    <button type="submit" class="header__search-btn">&#128269;</button>
+                    <button type="submit" class="header__search-btn"><img src="img/search-ico.svg" alt="search-ico"></button>
                 </form>
             </nav>
         </div>
@@ -33,10 +33,18 @@
 
             <div class="header__phone">+7 (8482) 39-89-89</div>
             <div class="header__city">
-                <span class="header__city-icon">&#128205;</span>
+                <span class="header__city-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M13.2834 1.18962C14.3552 0.787673 15.402 1.83437 15 2.90622L10.7148 14.3333C10.2383 15.6041 8.38923 15.4334 8.15336 14.0969L7.24429 8.94533L2.09276 8.03627C0.756208 7.8004 0.585535 5.95131 1.85631 5.47477L13.2834 1.18962ZM13.7516 2.43805L2.32448 6.7232L7.47596 7.63233C8.02783 7.72967 8.45989 8.16173 8.55729 8.7136L9.46643 13.8651L13.7516 2.43805Z" fill="white" />
+                    </svg>
+                </span>
                 <span class="header__city-name">Тольятти</span>
-                <span class="header__city-arrow">&#9662;</span>
+                <span class="header__city-arrow"><svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                 <path d="M2.8536 4.85535C2.65834 5.0506 2.65834 5.3672 2.8536 5.56245L5.2997 8.00615C5.6903 8.39635 6.3232 8.3962 6.7136 8.00585L9.15875 5.56065C9.35405 5.3654 9.35405 5.0488 9.15875 4.85354C8.9635 4.65828 8.6469 4.65828 8.45165 4.85354L6.35885 6.94635C6.1636 7.14165 5.847 7.1416 5.65175 6.94635L3.56071 4.85535C3.36545 4.66008 3.04886 4.66008 2.8536 4.85535Z" fill="white" />
+                     </svg>
+                </span>
             </div>
+            <button class="header__btn bookmark-btn  ">
             <button class="header__burger navbar-toggler d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-label="Меню">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -83,9 +91,9 @@
                     <div class="slider__overlay"></div>
                     <div class="slider__info">
                         <div class="slider__content">
-                            <div class="slider__date">05 июня, 19:00 • ДК «Автоград»</div>
+                            <div class="slider__date">31 мая, 19:00 • ДК «Автоград»</div>
                             <h3 class="slider__title">КняZz.<br>Ангел и Демон</h3>
-                            <div class="slider__price">от 1 200 ₽</div>
+                            <div class="slider__price">от 2 500 ₽</div>
                         </div>
                         <div class="slider__tags">
                             <span class=" tag slider__tag  purple slider__tag ">Пушкинская карта</span>
@@ -95,32 +103,31 @@
                     </div>
                 </div>
                 <div class="carousel-item slider__slide">
-                    <img src="img/main_banner.png" class="d-block w-100 slider__image" alt="Слайд 2">
+                    <img src="img/main_banner2.png" class="d-block w-100 slider__image" alt="Слайд 2">
                     <div class="slider__overlay"></div>
                     <div class="slider__info">
                         <div class="slider__content">
-                            <div class="slider__date">05 июня, 19:00 • ДК «Автоград»</div>
-                            <h3 class="slider__title">Новый концерт группы</h3>
-                            <div class="slider__price">от 1 200 ₽</div>
+                            <div class="slider__date">31 мая, 19:00 • ДК «Автоград»</div>
+                            <h3 class="slider__title ">Симфонические РОК-<br>ХИТЫ Лучшее CONCORD<br> ORCHESTRA</h3>
+                            <div class="slider__price">от 1 500 ₽</div>
                         </div>
                         <div class="slider__tags">
-                            <span class="slider__tag slider__tag--pushkin">Пушкинская карта</span>
-                            <span class="slider__tag slider__tag--humor">Концерт</span>
+                            <span class=" tag slider__tag  purple slider__tag ">Пушкинская карта</span>
+
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item slider__slide">
-                    <img src="img/main_banner.png" class="d-block w-100 slider__image" alt="Слайд 3">
+                    <img src="img/main_banner3.png" class="d-block w-100 slider__image" alt="Слайд 3">
                     <div class="slider__overlay"></div>
                     <div class="slider__info">
                         <div class="slider__content">
-                            <div class="slider__date">05 июня, 19:00 • ДК «Автоград»</div>
-                            <h3 class="slider__title">Новый концерт группы</h3>
-                            <div class="slider__price">от 1 200 ₽</div>
+                            <div class="slider__date">31 мая, 19:00 • ДК «Автоград»</div>
+                            <h3 class="slider__title">Мастер и Маргарита</h3>
+                            <div class="slider__price">от 1 500 ₽</div>
                         </div>
                         <div class="slider__tags">
-                            <span class="slider__tag slider__tag--pushkin">Пушкинская карта</span>
-                            <span class="slider__tag slider__tag--humor">Концерт</span>
+
                         </div>
                     </div>
                 </div>
